--- a/client/style.css
+++ b/client/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-  background: #343541;
+  background: #000000;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #000000;
 
   display: flex;
   flex-direction: column;
@@ -47,17 +47,19 @@ body {
 .wrapper {
   width: 100%;
   padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .ai {
-  background: #40414F;
+  background: #333333;
 }
 
 .chat {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -69,7 +71,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #5436DA;
+  background: #5436da;
 
   display: flex;
   justify-content: center;
@@ -101,7 +103,7 @@ body {
    * The pre-wrap value allows the browser to wrap long lines of text onto multiple lines if necessary.
    * The default value for the white-space property in CSS is "normal". This tells the browser to collapse multiple white space characters into a single space, and to wrap text onto multiple lines as needed to fit within its container.
   */
-  white-space: pre-wrap; 
+  white-space: pre-wrap;
 
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -117,7 +119,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #ffffff;
 
   display: flex;
   flex-direction: row;
@@ -127,7 +129,7 @@ form {
 textarea {
   width: 100%;
 
-  color: #fff;
+  color: #000000;
   font-size: 18px;
 
   padding: 10px;
